[package]
name = "rpass"
version = "1.2.0"
edition = "2024"
authors = ["Robert J. Hansen <rob@hansen.engineering>"]
description = "Constructs cryptographically strong passwords using the HC128 stream cipher."
repository = "https://github.com/rjhansen/rpass"
license = "Apache-2.0"
exclude = [
    ".vscode/*",
    ".gitignore",
]


[dependencies]
rand = "0.10.0"
base64 = "0.22.1"
rand_hc = "0.5.0"
clap = { version = "4.5.60", features = ["derive"] }
zeroize = "1.8.2"
terminal_size = "0.4.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "rpass"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false
proc-macro = false
harness = false
required-features = []
